application/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: ${DOCKER_IMAGE}:${CI_COMMIT_SHA}
        ports:
        - containerPort: 5000
